third_party/move/move-compiler-v2/tests/checking/inlining/acquires_error_msg_inline.exp

Diagnostics:
error: missing acquires annotation for `Test`
   ┌─ tests/checking/inlining/acquires_error_msg_inline.move:6:16
   │
 6 │     public fun call_modify_without_acquire() {
   │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^
 7 │         modify(); // expect error message here
   │         -------- from a call inlined at this callsite
   ·
11 │         borrow_global_mut<Test>(@0xcafe).value = 2;
   │         -------------------------------- acquired here

warning: storage operation on `test::Test` can only be done within module `0x42::test`, but `test::modify` could be called (and expanded) outside
   ┌─ tests/checking/inlining/acquires_error_msg_inline.move:10:23
   │
10 │     public inline fun modify() {
   │                       ^^^^^^
11 │         borrow_global_mut<Test>(@0xcafe).value = 2;
   │         -------------------------------- storage operation here

warning: field access on `test::Test` can only be done within module `0x42::test`, but `test::modify` could be called (and expanded) outside
   ┌─ tests/checking/inlining/acquires_error_msg_inline.move:10:23
   │
10 │     public inline fun modify() {
   │                       ^^^^^^
11 │         borrow_global_mut<Test>(@0xcafe).value = 2;
   │         -------------------------------------- field access here
